kubernetes/efk/fluentd/fluentd.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fluentd
  namespace: efk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: efk
        k8s-app: fluentd
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224 
        image: fluentd
        # volumeMounts:
        #   - name: fluentd
        #     mountPath: /home/coder/project
        #   - name: fluentd-config-local
        #     mountPath: /home/coder/.local
        #   - name: fluentd-config-vscode
        #     mountPath: /home/coder/.vscode
        #   - name: fluentd-init
        #     mountPath: /seb/init.sh
        #     subPath: init.sh
      # volumes:
      #   - name: fluentd
      #     persistentVolumeClaim:
      #       claimName: fluentd-claim
      #   - name: fluentd-config-local
      #     persistentVolumeClaim:
      #       claimName: fluentd-config-claim-local
      #   - name: fluentd-config-vscode
      #     persistentVolumeClaim:
      #       claimName: fluentd-config-claim-vscode
      #   - name: fluentd-init
      #     configMap:
      #       name: fluentd-init
      #       items:
      #       - key: init.sh
      #         path: init.sh
      #       defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: efk
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: fluentd
  name: fluentd
  namespace: efk
spec:
  ports:
  - port: 80
    targetPort: 24224
  selector:
    k8s-app: fluentd
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluentd
  namespace: efk
spec:
  rules:
  - host: fluentd.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: fluentd
          servicePort: 80
